--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "bluebird": "^3.4.7",
     "express": "^4.14.0",
     "pg-promise": "^5.5.2"
   }
